# RetroWeb

./: .gitignore  DEVLOG.md  NUL  PiStation_Full_Scale_Migration_Plan.md  README.md  README_GROUNDING.md  index.html  package-lock.json  package.json  pencil-demo.pen  pencil-lunaris.pen  pencil-nitro.pen  pencil-shadcn.pen  pencil-welcome.pen  retro-web-implementation-plan.md  retroweb-fixes-plan-v2.md  retroweb-fixes-plan-v3.md  start.mjs  temp.mjs  tsconfig.app.json  tsconfig.json  vite.config.ts
_bmad/_config/: agent-manifest.csv  bmad-help.csv  files-manifest.csv  (+3 more)
backend/: .env  .env.example  requirements.txt
docs/: HOW-IT-WORKS.md  index.html  styles.css  synthwave.css  synthwave.js
games/: README.md
games/BastionTD/src_cpp/: CMakeLists.txt  main.cpp  tools
games/BastionTD/src_cpp/core/: config.h  economy.cpp  economy.h  effects.cpp  effects.h  enemy.cpp  enemy.h  game.cpp  game.h  grid.cpp  grid.h  map_generator.cpp  map_generator.h  math_utils.h  pathfinding.cpp  pathfinding.h  projectile.cpp  projectile.h  save_manager.cpp  save_manager.h  tower.cpp  tower.h  types.h  wave_manager.cpp  wave_manager.h
games/BastionTD/src_cpp/gba_project/: AUDIO_README.md  BastionTD.gba  BastionTD_fixed.gba  Makefile
games/BastionTD/src_cpp/gba_project/include/: common_variable_8x16_sprite_font.h
games/BastionTD/src_cpp/gba_project/src/: main.cpp  save_manager_gba.cpp
games/BastionTD/src_cpp/gba_project/tools/: convert_assets.py
games/BastionTD/src_cpp/hal/: hal.h  sdl2_assets.cpp  sdl2_assets.h  sdl2_audio.cpp  sdl2_audio.h  sdl2_input.cpp  sdl2_input.h  sdl2_renderer.cpp  sdl2_renderer.h
games/BastionTD/src_cpp/states/: game_over_state.cpp  game_over_state.h  gameplay_state.cpp  gameplay_state.h  instructions_state.cpp  instructions_state.h  pause_state.cpp  pause_state.h  settings_state.cpp  settings_state.h  state.h  title_state.cpp  title_state.h  victory_state.cpp  victory_state.h
games/BastionTD/src_cpp/tests/: test_combat.cpp  test_economy.cpp  test_pathfinding.cpp  test_wave.cpp
games/Mythical/: CMakeLists.txt  README.md
games/Mythical/cpp_core/: CMakeLists.txt
games/Mythical/cpp_core/include/mythical/core/: campaign.hpp  combat.hpp  enemies.hpp  fixed.hpp  inventory.hpp  items.hpp  maps.hpp  player.hpp  quests.hpp  save.hpp  tilemap.hpp  world.hpp
games/Mythical/cpp_core/src/: campaign.cpp  combat.cpp  enemies.cpp  fixed.cpp  inventory.cpp  items.cpp  maps.cpp  player.cpp  quests.cpp  save.cpp  tilemap.cpp  world.cpp
games/Mythical/cpp_core/tests/: test_campaign.cpp  test_combat.cpp  test_fixed.cpp  test_inventory.cpp  test_quests.cpp  test_tilemap.cpp  test_world.cpp  test_world_save.cpp
games/Mythical/cpp_port/: CMakeLists.txt
games/Mythical/cpp_port/src/: main.cpp  render.cpp  render.hpp  save_io.cpp  save_io.hpp  terminal.cpp  terminal.hpp
games/Mythical/cpp_port/tests/: test_save_io.cpp
games/Mythical/docs/: CPP_AND_GBA_BUILD.md  GBA_PORT_READINESS.md  GBA_PORT_SUMMARY.md  PROJECT_STATUS.md
games/Mythical/docs/superpowers/plans/: 2026-04-24-full-cpp-gba-port-phase-1.md
games/Mythical/docs/superpowers/specs/: 2026-04-24-full-cpp-gba-port-design.md
games/Mythical/gba_project/: Makefile  Mythical_GBA.gba  README.md  convert_assets.py  convert_content.py  gba.h  main.c
games/Mythical/gba_project/docs/: PORT_PARITY.md  PROJECT_STATUS.md
games/Mythical/src/cpp_game_tools/: generate_gba_assets.py  generate_gba_rom_tables.py
games/Mythical/src/python_game/: animal.py  animal_spawner.py  audio_manager.py  bestiary.py  boss.py  boss2.py  boss3.py  camera.py  campaign.py  combat.py  consequence_system.py  content_registry.py  crafting.py  dialogue.py  effects.py  enemy.py  environmental.py  fast_travel.py  game_math.py  hud.py  input_handler.py  interactable.py  inventory.py  item_system.py  lighting.py  main.py  map_manager.py  npc.py  placeholder_sprites.py  player.py  player_forms.py  post_process.py  progression.py  quest.py  reputation.py  rewards.py  save_manager.py  savegame.json  settings.py  skill_tree.py  (+3 more)
games/Mythical/src/python_game/ai/: __init__.py  config_loader.py  debug.py  influence.py  pathfinding.py
games/Mythical/src/python_game/assets/compiled/animal_bear/: meta.json
games/Mythical/src/python_game/assets/compiled/animal_boar/: meta.json
games/Mythical/src/python_game/assets/compiled/animal_deer/: meta.json
games/Mythical/src/python_game/assets/compiled/animal_fish/: meta.json
games/Mythical/src/python_game/assets/compiled/animal_rabbit/: meta.json
games/Mythical/src/python_game/assets/compiled/animal_wolf/: meta.json
games/Mythical/src/python_game/assets/compiled/boss_2/: meta.json
games/Mythical/src/python_game/assets/compiled/player/: meta.json
games/Mythical/src/python_game/content/: stage2_content.py  stage3_content.py
games/Mythical/src/python_game/data/: boss_ai_configs.json  difficulty_configs.json  enemy_ai_configs.json  stage_configs.json
games/Mythical/src/python_game/maps/: dungeon.py  ruins.py  sanctum.py  village.py
games/Mythical/src/python_game/runtime/: __init__.py  asset_manager.py  asset_pipeline.py  base.py  display_defaults.py  fixed_point.py  frame_clock.py  gba_compat.py  gba_runtime.py  memory_budget.py  null_audio.py  pygame_input.py  pygame_runtime.py  target_profiles.py
games/Mythical/src/python_game/states/: bestiary_screen.py  crafting_screen.py  game_over.py  gameplay.py  instructions.py  inventory_screen.py  pause.py  skill_screen.py  stage_intro.py  state_machine.py  title.py  victory.py
games/Mythical/src/python_game/tests/: test_campaign.py  test_drift_fixes.py  test_gba_runtime.py  test_regressions.py
games/Mythical/src/python_game/tools/: author_sprites.py  compile_assets.py  ga_balance_tuner.py
games/Mythical/src/python_game/ui/: __init__.py  fonts.py
laptop/: README.md
pi/: README.md
public/: synthwave-r34.html
scripts/: audit-cores.ts  dashboard-stream.sh  download-cores.ts  kokoro-tts-server.py  parakeet-server.py  whisper-server.py
src/: AI_ASSISTANT.md  ARCHITECTURE.md  App.tsx  index.css  main.tsx
tests/: rom-normalizer.test.mjs
(+335 files in other folders)
